--- a/My Web Sites/index.html
+++ b/My Web Sites/index.html
@@ -18,41 +18,20 @@
         <center>
         <div class="menu">
             <a href="About me.html">
-                <button id="AboutMe-btn">About Me</button>
+                <img src="about me.png" alt="About Me" style="width:42px;height:42px;">
             </a>
             
             <a href="Contacts.html">
-                <button id="Contacts-btn">Contact Us</button>
+                <img src="contacts.png" alt="Contacts" style="width:42px;height:42px;">
             </a>
 
             <a href="Gallery.html">
-                <button id="Gallery-btn">Gallery</button>
+               <img src="gallery.png" alt="Gallery" style="width:42px;height:42px;">
             </a>   
         </div>       
         <br>
     </center>
-        </br>
-        <h1>This is my 2022 so far..</h1>
-        <div class="center box">
-            <h2 id="I1">  Klasmeyts goes to my hometown! </h2>
-        <center>
-            <video id="our Channels" width="500" height="300" controls>
-                <source src="C:\Users\Pachuchay\Documents\My Web Sites\vid.mp4" type="video/mp4">        
-            </video>
-        </center>
-            <br></br>
-            <br></br>
-            <h3 id="I1">  My sisters sang my favorite song!</h3>  
-            <center>
-            <audio controls>
-                <source src ="C:\Users\Pachuchay\Documents\My Web Sites\edison lighthouse • love grows cover.mp3" type="audio/wav">
-            </audio>
-            <br></br>
-            <br></br>
-            <h3><p class="vid">This is my mood for 2022.....</p></h3>
-            <img src="MOOD.gif">
-        </center>
-            <br></br>
+            
             <br></br>
             <marquee direction="right" 
         behavior="alternate">
