--- a/My Web Sites/About me.html
+++ b/My Web Sites/About me.html
@@ -14,7 +14,7 @@
         <center>
         <h1 id="AM-Title">About Me</h1></center>
         <div class="Content-box">
-            <img src="C:\Users\Pachuchay\Documents\My Web Sites\images\Gallery\legal 3.jpg" width="300" height="200" >
+            <img src="about me.jpg" width="300" height="200" >
             <br></br>
             <h3><b>Basic information about me</b></h3>
             <br>
