--- a/My Web Sites/Gallery.html
+++ b/My Web Sites/Gallery.html
@@ -18,16 +18,16 @@
             <h5>This is me when I was young...</h5>
             <br></br>
             <h6>
-            <img src="C:\Users\Pachuchay\Documents\My Web Sites\images\Gallery\child 4.jpg" width="240" height="320">
-            <img src="C:\Users\Pachuchay\Documents\My Web Sites\images\Gallery\child 3.jpg" width="240" height="320">
-            <img src="C:\Users\Pachuchay\Documents\My Web Sites\images\Gallery\child 2.jpg" width="240" height="320">
+            <img src="child 4.jpg" width="50" height="50">
+            <img src="child 3.jpg" width="50" height="50">
+            <img src="child 2.jpg" width="50" height="50">
             <br></br>
             <br></br>
             <h5>This is me when I reach my Legality...</h5>
             <br></br>
-            <img src="C:\Users\Pachuchay\Documents\My Web Sites\images\Gallery\legal 1.jpg" width="240" height="320">
-            <img src="C:\Users\Pachuchay\Documents\My Web Sites\images\Gallery\legal 2.jpg" width="240" height="320">
-            <img src="C:\Users\Pachuchay\Documents\My Web Sites\about me.jpg"  width="240" height="320">
+            <img src="legal 1.jpg" width="50" height="50">
+            <img src="legal 2.jpg" width="50" height="50">
+            <img src="about me.jpg"  width="50" height="50">
             </h6>
         </div>
         <br></br>
