--- a/My Web Sites/About me.html
+++ b/My Web Sites/About me.html
@@ -40,7 +40,7 @@
 
         </justify>
         <div class="home-btn">
-            <a href="Index.html">
+            <a href="index.html">
                 <button class="go-back-btn">Back</button>
             </a>
         </div>
