--- a/My Web Sites/Gallery.html
+++ b/My Web Sites/Gallery.html
@@ -32,7 +32,7 @@
         </div>
         <br></br>
         <div class="home-btn">
-            <a href="Index.html">
+            <a href="index.html">
                 <button class="go-back-btn">Back</button>
             </a>
         </div>
