--- a/My Web Sites/Gallery.html
+++ b/My Web Sites/Gallery.html
@@ -27,7 +27,7 @@
             <br></br>
             <img src="legal 1.jpg" width="50" height="50">
             <img src="legal 2.jpg" width="50" height="50">
-            <img src="about me.jpg"  width="50" height="50">
+            <img src="legal 3.jpg"  width="50" height="50">
             </h6>
         </div>
         <br></br>
