--- a/My Web Sites/index.html
+++ b/My Web Sites/index.html
@@ -18,7 +18,7 @@
         <center>
         <div class="menu">
             <a href="About me.html">
-                <img src="about me.png" alt="About Me" style="width:42px;height:42px;">
+                <img src="graphic-designer.png" alt="About Me" style="width:42px;height:42px;">
             </a>
             
             <a href="Contacts.html">
