--- a/My Web Sites/index.html
+++ b/My Web Sites/index.html
@@ -18,7 +18,7 @@
         <center>
         <div class="menu">
             <a href="About me.html">
-                <img src="graphic-designer.png" alt="About Me" style="width:100px;height:200px;">
+                <img src="graphic-designer.png" alt="About Me" style="width:100;height:200;">
             </a>
             
             <a href="Contacts.html">
