--- a/My Web Sites/index.html
+++ b/My Web Sites/index.html
@@ -18,15 +18,15 @@
         <center>
         <div class="menu">
             <a href="About me.html">
-                <img src="graphic-designer.png" alt="About Me" style="width:70;height:70;">
+                <img src="graphic-designer.png" alt="About Me" style="width:70px;height:70px;">
             </a>
             
             <a href="Contacts.html">
-                <img src="contacts.png" alt="Contacts" tyle="width:70;height:70;">
+                <img src="contacts.png" alt="Contacts" tyle="width:70px;height:70px;">
             </a>
 
             <a href="Gallery.html">
-               <img src="gallery.png" alt="Gallery" tyle="width:70;height:70;">
+               <img src="gallery.png" alt="Gallery" tyle="width:70px;height:70px;">
             </a>   
         </div>       
         <br>
