--- a/My Web Sites/index.html
+++ b/My Web Sites/index.html
@@ -22,11 +22,11 @@
             </a>
             
             <a href="Contacts.html">
-                <img src="contacts.png" alt="Contacts" tyle="width:60px;height:60px;">
+                <img src="contacts.png" alt="Contacts" style="width:60px;height:60px;">
             </a>
 
             <a href="Gallery.html">
-               <img src="gallery.png" alt="Gallery" tyle="width:60px;height:60px;">
+               <img src="gallery.png" alt="Gallery" style="width:60px;height:60px;">
             </a>   
         </div>       
         <br>
