--- a/My Web Sites/index.html
+++ b/My Web Sites/index.html
@@ -18,15 +18,15 @@
         <center>
         <div class="menu">
             <a href="About me.html">
-                <img src="graphic-designer.png" alt="About Me" style="width:75px;height:75px;">
+                <img src="graphic-designer.png" alt="About Me" style="width:75;height:75;">
             </a>
             
             <a href="Contacts.html">
-                <img src="contacts.png" alt="Contacts" style="width:75px;height:75px;">
+                <img src="contacts.png" alt="Contacts" style="width:75;height:75;">
             </a>
 
             <a href="Gallery.html">
-               <img src="gallery.png" alt="Gallery" style="width:75px;height:75px;">
+               <img src="gallery.png" alt="Gallery" style="width:75;height:75;">
             </a>   
         </div>       
         <br>
