--- a/My Web Sites/index.html
+++ b/My Web Sites/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>My Website</title>
         <link rel="stylesheet" href="design.css">
+        <p style="background-image: url('bg.jpg');">
     </head>
     <body>
 
