--- a/My Web Sites/index.html
+++ b/My Web Sites/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>My Website</title>
         <link rel="stylesheet" href="design.css">
-        <p style="background-image: url('bg.jpg');">
+        <p style="background-image: bg.jpg;">
     </head>
     <body>
 
