--- a/My Web Sites/index.html
+++ b/My Web Sites/index.html
@@ -4,10 +4,12 @@
         <meta charset="utf-8">
         <title>My Website</title>
         <link rel="stylesheet" href="design.css">
-        <p style="background-image: bg.jpg;">
+        
     </head>
     <body>
-
+<style>
+    p {background-image: url('bg.jpg');}
+</style>
         <center>
             <br> 
         <h1>WELCOME TO MY WEBSITE!</h1>
