--- a/My Web Sites/index.html
+++ b/My Web Sites/index.html
@@ -21,11 +21,11 @@
         <center>
         <div class="menu">
             <a href="About me.html">
-                <img src="graphic-designer.png" alt="About Me" style="width:80;height:80;">
+                <img src="about me.png" alt="About Me" style="width:80;height:80;">
             </a>
             
             <a href="Contacts.html">
-                <img src="contacts.png" alt="Contacts" style="width:80;height:80;">
+                <img src="contact.png" alt="Contacts" style="width:80;height:80;">
             </a>
 
             <a href="Gallery.html">
