--- a/My Web Sites/Gallery.html
+++ b/My Web Sites/Gallery.html
@@ -16,9 +16,9 @@
         <h1 id="AM-Title">Gallery</h1>
          <div class="Gallery1">
             <h5>This is me when I was young...</h5>
-               <img src="child 1.jpg" alt="Child 1" style="width:50;height:50;">
-               <img src="child 2.jpg" alt="Child 2" style="width:50;height:50;">
-               <img src="child 3.jpg" alt="Child 3" style="width:75;height:75;">
+               <img src="child 1.jpg" style="width:50;height:50;">
+               <img src="child 2.jpg" style="width:50;height:50;">
+               <img src="child 3.jpg" style="width:75;height:75;">
     
         </div>    
           <div class="Gallery2">
