--- a/My Web Sites/Gallery.html
+++ b/My Web Sites/Gallery.html
@@ -16,16 +16,16 @@
         <h1 id="AM-Title">Gallery</h1>
          <div class="Gallery1">
             <h5>This is me when I was young...</h5>
-               <img src="child 4.jpg" width="50px" height="50px">
-             <img src="child 2.jpg" width="50px" height="50px">
-             <img src="child 3.jpg" width="50px" height="50px">
+               <img src="child 4.jpg" width="50" height="50">
+             <img src="child 2.jpg" width="50" height="50">
+             <img src="child 3.jpg" width="50" height="50">
     
         </div>    
           <div class="Gallery2">
             <h5>This is me when I reach my Legality...</h5>
-               <img src="legal 1.jpg" width="50px" height="50px">
-               <img src="legal 2.jpg" width="50px" height="50px">
-               <img src="legal 3.jpg" width="50px" height="50px">
+               <img src="legal 1.jpg" width="50" height="50">
+               <img src="legal 2.jpg" width="50" height="50">
+               <img src="legal 3.jpg" width="50" height="50">
     
         </div>
             </center>
