--- a/My Web Sites/Gallery.html
+++ b/My Web Sites/Gallery.html
@@ -17,13 +17,13 @@
          <div class="Gallery1">
             <h5>This is me when I was young...</h5>
                <img src="images/Gallery\child 4.jpg" width="100" height="100">
-               <img src="child 2.jpg" width="100" height="100">
-               <img src="child 3.jpg" width="100" height="100">
+               <img src="images/Gallery\child 2.jpg" width="100" height="100">
+               <img src="images/Gallery\child 3.jpg" width="100" height="100">
    
             <h5>This is me when I reach my Legality...</h5>
-               <img src="legal 1.jpg" width="100" height="100">
-               <img src="legal 2.jpg" width="100" height="100">
-               <img src="legal 3.jpg" width="100" height="100">
+               <img src="images/Gallery\legal 1.jpg" width="100" height="100">
+               <img src="images/Gallery\legal 2.jpg" width="100" height="100">
+               <img src="images/Gallery\legal 3.jpg" width="100" height="100">
     
         </div>
             </center>
