--- a/My Web Sites/index.html
+++ b/My Web Sites/index.html
@@ -31,7 +31,7 @@
          
             <marquee direction="right" 
         behavior="alternate">
-       I hope it helps you to know me!! ☆*: .｡. o(≧▽≦)o .｡.:*☆
+       I hope this will help you learn more about me!! ☆*: .｡. o(≧▽≦)o .｡.:*☆
     </marquee>
 <center><h4>Created By Patricia Anne R. Phee   </h4></center>
 
