--- a/My Web Sites/About me.html
+++ b/My Web Sites/About me.html
@@ -26,12 +26,11 @@
                 <br></br>
                 <b>College Course:</b> B.S. information Technology
                 <br></br>
-                <b>Current Scholl:</b> Adamson University
+                <b>Current School:</b> Adamson University
                 <br></br>
                 <br></br>
-                I believe in:
-                <br></br>
-        <h1><b> "Fall Down 7 Times, Stand Up 8." </b></h1>
+                
+        <h1><b> "It is never too late to be what you might have been." </b></h1>
         <br></br>
         </div>
         
